@@ -1,3 +1,7 @@
+2019-02-04  Marc A. Smith  <marc.smith@quantum.com>
+
+	fixes for rpc_agent build option, added Python deepdiff module, several other build tweaks/fixes
+
 2019-02-03  Marc A. Smith  <marc.smith@quantum.com>
 
 	added a symlink for 'esos.img' used by custom build bits; added --with-ssh_auth_key=FILE autoconf option; updated naming variable in TUI and strings in aboutDialog()
